--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,24 @@
 				<img src="12.png">
 			</div>
 			<div class="portfoliod1">
-				<h1>Project Draw By Typing (1.1.9): Using python and Visual Studio code, my group created a program which interacted with users to create different drawings. Users can select one of four models: a car, an apple, a flower, or a snowman. Additionally, based on the model selection users are prompted to pick their desired colors that will be incorporated into their drawing. Lastly, the program executes the drawing and adds an animation in the background (i.e. the car model will have a sun pass by to give the illusion of movement as seen above).</h1>
+				<h1>Project Draw By Typing (1.1.9): Using python and 
+					Visual Studio code, my group created a program which 
+					interacted with users to create different drawings. 
+					Users can select one of four models: a car, an apple, 
+					a flower, or a snowman. Additionally, based on the model 
+					selection users are prompted to pick their desired colors 
+					that will be incorporated into their drawing. Lastly, 
+					the program executes the drawing and adds an animation 
+					in the background(i.e. the car model will have a sun pass
+					by to give the illusion of movement as seen above).</h1>
 
+			</div>
+			<div class="picture14">
+				<img src="14.png">
+			</div>
+			<div class="portfoliod2">
+				<h1>Project Turtle Racing (1.2.5): Our group used 
+					Visual Studio code and python, to create a user interactive game complete with a timer, scoring functionality, and keyboard input. The game we made consists of a custom designed 2D map with trees, rocks, coins, and a road. We incorporated random generation of coins around the map which the player has to drive towards with the arrow keys and 'collect'. The objective of the game is to collect the highest number of coins within one minute.</h1>
 			</div>
 		
 			</header>
